fix code overflow

--- a/assets/css/highlight.sass
+++ b/assets/css/highlight.sass
@@ -4,6 +4,7 @@
   line-height: 150%
   padding: 10px
   border-radius: 5px
+  overflow-x: auto
 .c
   color: #a29f90
 .err
